...
            android:text="Low"/>

        <RadioButton
            android:id="@+id/mediumPriority"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Medium"/>

        <RadioButton
            android:id="@+id/highPriority"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="High"/>
...
